--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -85,6 +85,7 @@ DoubleClickTime=0.200000
 +AxisMappings=(AxisName="MoveRight",Scale=-1.000000,Key=A)
 +AxisMappings=(AxisName="Turn",Scale=1.000000,Key=MouseX)
 +AxisMappings=(AxisName="LockUP",Scale=-1.000000,Key=MouseY)
++AxisMappings=(AxisName="Jump",Scale=1.000000,Key=SpaceBar)
 DefaultPlayerInputClass=/Script/Engine.PlayerInput
 DefaultInputComponentClass=/Script/Engine.InputComponent
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
