--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -4,7 +4,7 @@
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 
 
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/PomazanAR/Level/NewMap.NewMap
 GlobalDefaultGameMode=/Game/PomazanAR/Main/MainGM.MainGM_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
